2009-10-14  Shu Chang  <Chang.Shu@nokia.com>

Reviewed by Simon Hausmann.

        [Qt] Implement support for setPOSIXLocale on Qt.
        https://bugs.webkit.org/show_bug.cgi?id=30268

        * DumpRenderTree/qt/DumpRenderTree.cpp:
        (WebCore::DumpRenderTree::resetToConsistentStateBeforeTesting):
        * DumpRenderTree/qt/LayoutTestControllerQt.cpp:
        (LayoutTestController::setPOSIXLocale):
        * DumpRenderTree/qt/LayoutTestControllerQt.h:

Canonical link: https://commits.webkit.org/41037@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@49563 268f45cc-cd09-0410-ab3c-d52691b4dbfc